[gd_scene load_steps=24 format=3 uid="uid://bqko0p70buahx"]

[ext_resource type="Script" path="res://Scripts/state_chart_enemy.gd" id="1_co6sp"]
[ext_resource type="Texture2D" uid="uid://bqabf4g66sxg8" path="res://Sprites/pirate_snail/pirate_all_snail.png" id="1_qxy3s"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_n72y3"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="3_dcexh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="4_8r5ai"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="4_pku3s"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_iqd13"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="7_x2ig5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_is_active_guard.gd" id="8_x6eli"]
[ext_resource type="Script" path="res://addons/godot_state_charts/not_guard.gd" id="9_wps06"]
[ext_resource type="PackedScene" uid="uid://1n1ogpj3d1ai" path="res://Scenes/emote_container.tscn" id="10_ss7h0"]
[ext_resource type="PackedScene" uid="uid://cdongig3hy7di" path="res://Scenes/ray_cast_container.tscn" id="10_xjnud"]

[sub_resource type="Animation" id="Animation_r3b8o"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PirateAllSnail:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_4yhc3"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PirateAllSnail:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_c7g3e"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PirateAllSnail:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eu1qa"]
_data = {
"RESET": SubResource("Animation_r3b8o"),
"idle": SubResource("Animation_4yhc3"),
"walk": SubResource("Animation_c7g3e")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_uyeq4"]
radius = 86.77

[sub_resource type="Resource" id="Resource_p81q5"]
script = ExtResource("8_x6eli")
state = NodePath("../../../AggroState/Aggro")

[sub_resource type="Resource" id="Resource_bf6nh"]
script = ExtResource("9_wps06")
guard = SubResource("Resource_p81q5")

[sub_resource type="Resource" id="Resource_gjm35"]
script = ExtResource("8_x6eli")
state = NodePath("../../../AggroState/Aggro")

[sub_resource type="Resource" id="Resource_jqo2v"]
script = ExtResource("9_wps06")
guard = SubResource("Resource_gjm35")

[sub_resource type="Resource" id="Resource_bxx37"]
script = ExtResource("8_x6eli")
state = NodePath("../../../AlertState/LostPlayerState")

[sub_resource type="Resource" id="Resource_rllhe"]
script = ExtResource("9_wps06")
guard = SubResource("Resource_bxx37")

[node name="StateChartEnemy" type="CharacterBody2D" node_paths=PackedStringArray("body_sprite", "StateChart", "emoteContainer", "animationPlayer", "aggrotimer", "idletimer", "lostplayertimer", "spritefliptimer", "navAgent", "rayCastContainer", "sightArea")]
script = ExtResource("1_co6sp")
body_sprite = NodePath("PirateAllSnail")
StateChart = NodePath("StateChart")
emoteContainer = NodePath("EmoteContainer")
animationPlayer = NodePath("AnimationPlayer")
aggrotimer = NodePath("aggrotimer")
idletimer = NodePath("idletimer")
lostplayertimer = NodePath("lostplayertimer")
spritefliptimer = NodePath("spritefliptimer")
navAgent = NodePath("NavigationAgent2D")
rayCastContainer = NodePath("RayCastContainer")
sightArea = NodePath("SightRadius")
max_speed = 100.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_eu1qa")
}

[node name="PirateAllSnail" type="Sprite2D" parent="."]
texture = ExtResource("1_qxy3s")
offset = Vector2(0, -24)
hframes = 7
vframes = 5

[node name="SightRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRadius"]
shape = SubResource("CircleShape2D_uyeq4")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_n72y3")

[node name="Root" type="Node" parent="StateChart"]
script = ExtResource("4_pku3s")

[node name="AlertState" type="Node" parent="StateChart/Root"]
script = ExtResource("3_dcexh")
initial_state = NodePath("WanderState")

[node name="WanderState" type="Node" parent="StateChart/Root/AlertState"]
script = ExtResource("4_8r5ai")

[node name="toObserving" type="Node" parent="StateChart/Root/AlertState/WanderState"]
script = ExtResource("6_iqd13")
to = NodePath("../../ObservingState")
event = &"player_entered"

[node name="toIdleState" type="Node" parent="StateChart/Root/AlertState/WanderState"]
script = ExtResource("6_iqd13")
to = NodePath("../../IdleState")
event = &"back_to_rest"

[node name="ObservingState" type="Node" parent="StateChart/Root/AlertState"]
script = ExtResource("4_8r5ai")

[node name="toIdleState" type="Node" parent="StateChart/Root/AlertState/ObservingState"]
script = ExtResource("6_iqd13")
to = NodePath("../../IdleState")
event = &"player_exited"
guard = SubResource("Resource_bf6nh")

[node name="toAggro" type="Node" parent="StateChart/Root/AlertState/ObservingState"]
script = ExtResource("6_iqd13")
to = NodePath("../../../AggroState/Aggro")
event = &"is_aggro"

[node name="IdleState" type="Node" parent="StateChart/Root/AlertState"]
script = ExtResource("4_8r5ai")

[node name="toWanderState" type="Node" parent="StateChart/Root/AlertState/IdleState"]
script = ExtResource("6_iqd13")
to = NodePath("../../WanderState")
event = &"idled_enough"

[node name="toObserving" type="Node" parent="StateChart/Root/AlertState/IdleState"]
script = ExtResource("6_iqd13")
to = NodePath("../../ObservingState")
event = &"player_entered"

[node name="LostPlayerState" type="Node" parent="StateChart/Root/AlertState"]
script = ExtResource("4_8r5ai")

[node name="toIdleState" type="Node" parent="StateChart/Root/AlertState/LostPlayerState"]
script = ExtResource("6_iqd13")
to = NodePath("../../IdleState")
event = &"back_to_rest"
guard = SubResource("Resource_jqo2v")

[node name="toAggro" type="Node" parent="StateChart/Root/AlertState/LostPlayerState"]
script = ExtResource("6_iqd13")
to = NodePath("../../../AggroState/Aggro")
event = &"player_entered"

[node name="AggroState" type="Node" parent="StateChart/Root"]
script = ExtResource("3_dcexh")
initial_state = NodePath("NonAggro")

[node name="Aggro" type="Node" parent="StateChart/Root/AggroState"]
script = ExtResource("4_8r5ai")

[node name="toNonAggro" type="Node" parent="StateChart/Root/AggroState/Aggro"]
script = ExtResource("6_iqd13")
to = NodePath("../../NonAggro")
event = &"player_exited"

[node name="NonAggro" type="Node" parent="StateChart/Root/AggroState"]
script = ExtResource("4_8r5ai")

[node name="toAggro" type="Node" parent="StateChart/Root/AggroState/NonAggro"]
script = ExtResource("6_iqd13")
to = NodePath("../../Aggro")
event = &"is_aggro"
guard = SubResource("Resource_rllhe")

[node name="toLostPlayer" type="Node" parent="StateChart/Root/AggroState/NonAggro"]
script = ExtResource("6_iqd13")
to = NodePath("../../../AlertState/LostPlayerState")
event = &"lost_player"

[node name="StateChartDebugger" parent="." instance=ExtResource("7_x2ig5")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 193.0
offset_top = -202.0
offset_right = 388.0
offset_bottom = 7.0
grow_horizontal = 1
grow_vertical = 1
initial_node_to_watch = NodePath("../StateChart")

[node name="EmoteContainer" parent="." instance=ExtResource("10_ss7h0")]
position = Vector2(0, -50)

[node name="aggrotimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="idletimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="lostplayertimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="spritefliptimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="RayCastContainer" parent="." instance=ExtResource("10_xjnud")]

[connection signal="area_entered" from="SightRadius" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="SightRadius" to="." method="_on_area_2d_area_exited"]
[connection signal="state_entered" from="StateChart/Root/AlertState/WanderState" to="." method="_on_wander_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/AlertState/WanderState" to="." method="_on_wander_state_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/AlertState/ObservingState" to="." method="_on_observing_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/AlertState/ObservingState" to="." method="_on_observing_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/AlertState/IdleState" to="." method="_on_idle_state_state_entered"]
[connection signal="state_entered" from="StateChart/Root/AlertState/LostPlayerState" to="." method="_on_lost_player_state_state_entered"]
[connection signal="state_physics_processing" from="StateChart/Root/AlertState/LostPlayerState" to="." method="_on_lost_player_state_state_physics_processing"]
[connection signal="state_entered" from="StateChart/Root/AggroState/Aggro" to="." method="_on_aggro_state_entered"]
[connection signal="state_exited" from="StateChart/Root/AggroState/Aggro" to="." method="_on_aggro_state_exited"]
[connection signal="state_physics_processing" from="StateChart/Root/AggroState/Aggro" to="." method="_on_aggro_state_physics_processing"]
[connection signal="timeout" from="aggrotimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="idletimer" to="." method="_on_idletimer_timeout"]
[connection signal="timeout" from="lostplayertimer" to="." method="_on_lostplayertimer_timeout"]
[connection signal="timeout" from="spritefliptimer" to="." method="_on_spritefliptimer_timeout"]
